# df2x

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: GetGitRevision.cmake
src/: version.hpp.in  version.rc.in
src/game_dll/: CMakeLists.txt  component_loader.cpp  component_loader.hpp  dllmain.cpp  pch.cpp  pch.hpp
src/game_dll/components/: archive.cpp  archive.hpp  component.hpp  discordrpc.cpp  discordrpc.hpp  dispatcher.cpp  dispatcher.hpp  misc.cpp  misc.hpp  network.cpp  network.hpp
src/game_dll/game/: game.cpp  game.hpp  structs.hpp
src/game_dll/utils/: memory.cpp  memory.hpp
src/updater/: CMakeLists.txt  main.cpp  pch.hpp
